# ANNveal

./: Cargo.toml  LICENSE  README.md  ideas.md
java/: VamanaGraph.java
python/: .gitignore  faiss_top_k.py  vamana.py
src/: acorn_flat.rs  main.rs  quantization.rs  scorer.rs  store.rs  test.rs  utils.rs  vamana.rs  vec.rs
src/graph/: mod.rs  vamana.rs
src/scann/: mod.rs
