[package]
name = "flat_knn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
hnsw = { version = "0.11.0", features = ["serde1"] }
memmap2 = "0.9.4"
ordered-float = "4.2.0"
rand_pcg = { version = "0.3.1", features = ["serde", "serde1"] }
rayon = "1.10.0"
rmp-serde = "1.1.2"
serde = { version = "1.0.197", features = ["derive"] }
simsimd = "4.0.0"
space = "0.17.0"
