[package]
name = "flat_knn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.11"
clap = { version = "4.5.1", features = ["derive"] }
crossbeam-skiplist = "0.1.3"
indicatif = "0.17.8"
memmap2 = "0.9.4"
ordered-float = "4.2.0"
rand = "0.8.5"
rand_pcg = "0.3.1"
rayon = "1.10.0"
simsimd = "4.0.0"
smallvec = { version = "1.13.2", features = ["union", "const_generics", "const_new"] }
thread_local = "1.1.8"
