[package]
name = "annveal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.11"
clap = { version = "4.5.23", features = ["derive"] }
crossbeam-skiplist = "0.1.3"
indicatif = "0.17.9"
memmap2 = { version = "0.9.5", features = ["stable_deref_trait"] }
ordered-float = "4.6.0"
rand = "0.8.5"
rand_pcg = "0.3.1"
rayon = "1.10.0"
rmp-serde = "1.3.0"
serde = { version = "1.0.217", features = ["serde_derive"] }
simsimd = "6.2.3"
smallvec = { version = "1.13.2", features = ["union", "const_generics", "const_new"] }
stable_deref_trait = "1.2.0"
thread_local = "1.1.8"
